k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beast
  labels:
    app.kubernetes.io/part-of: beast
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
