k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beast-apiserver
  namespace: beast
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: beast
spec:
  type: ClusterIP
  selector:
      app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
